[gd_scene load_steps=12 format=2]

[ext_resource path="res://art/maximize_icon.png" type="Texture" id=1]
[ext_resource path="res://art/x_icon.png" type="Texture" id=2]
[ext_resource path="res://art/window.png" type="Texture" id=3]
[ext_resource path="res://art/minimize_icon.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Window.gd" type="Script" id=5]
[ext_resource path="res://art/dragButton.png" type="Texture" id=6]
[ext_resource path="res://sounds/bup.tres" type="AudioStream" id=7]
[ext_resource path="res://fonts/VT323-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://themes/v_scroll.tres" type="Theme" id=9]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_detail = 1
anti_aliasing = false

[node name="Window" type="Node2D"]
script = ExtResource( 5 )

[node name="wind" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="dragButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -195.0
margin_top = -195.0
margin_right = 191.0
margin_bottom = -164.0
texture_normal = ExtResource( 6 )

[node name="RichTextLabel" type="Label" parent="dragButton"]
margin_left = 14.0
margin_top = 8.0
margin_right = 289.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.027451, 0.666667, 0.0627451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Document"

[node name="xButton" type="TextureButton" parent="."]
margin_left = 170.0
margin_top = -189.0
margin_right = 186.0
margin_bottom = -173.0
texture_normal = ExtResource( 2 )

[node name="minButton" type="TextureButton" parent="."]
margin_left = 120.0
margin_top = -189.0
margin_right = 120.0
margin_bottom = -189.0
texture_normal = ExtResource( 4 )

[node name="maxButton" type="TextureButton" parent="."]
margin_left = 145.0
margin_top = -189.0
margin_right = 161.0
margin_bottom = -173.0
texture_normal = ExtResource( 1 )

[node name="Text" type="TextEdit" parent="."]
visible = false
margin_left = -184.0
margin_top = -148.0
margin_right = 183.0
margin_bottom = 185.0
theme = ExtResource( 9 )
custom_colors/selection_color = Color( 0.027451, 0.666667, 0.0627451, 1 )
custom_colors/caret_color = Color( 0.027451, 0.666667, 0.0627451, 1 )
custom_colors/font_color = Color( 0.027451, 0.666667, 0.0627451, 1 )
custom_colors/background_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
context_menu_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
wrap_enabled = true
caret_block_mode = true
caret_blink = true

[node name="Image" type="Sprite" parent="."]
position = Vector2( 0, 17 )
scale = Vector2( 0.515, 0.515 )

[node name="bopSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="button_down" from="dragButton" to="." method="_on_dragButton_button_down"]
[connection signal="button_up" from="dragButton" to="." method="_on_dragButton_button_up"]
[connection signal="pressed" from="dragButton" to="." method="_on_dragButton_pressed"]
[connection signal="pressed" from="xButton" to="." method="_on_xButton_pressed"]
